# music-room

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.Dockerfile  bot.Dockerfile  config.py  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  settings.example.yaml  settings.schema.yaml
.github/workflows/: build-docker-api.yaml  build-docker-bot.yaml  build-docker.yaml  deploy-api.yaml  deploy-bot.yaml  deploy-production.yaml  deploy-staging.yaml
alembic/: README  env.py
alembic/versions/: _2023_12_15_18_47_init_alembic.py  _2024_01_04_21_20_add_id_field_to_potential_user_table.py  _2024_03_24_18_20_migrate_to_accounts.py  _2024_03_24_18_21_rename_participant_to_user.py  _2024_09_28_19_46_make_telegram_id_bigint.py
api/: dependencies.py  exceptions.py  main.py  routers.py
api/auth/: __init__.py  routes.py  service.py
api/bookings/: __init__.py  routes.py
api/participants/: __init__.py  routes.py
api/tools/: __init__.py  crypto.py  hours_validation.py  tools.py  utils.py  validation.py
api/tools/auth/: service.py
deploy/: Dockerfile
locales/: messages.pot
locales/en/LC_MESSAGES/: dialog.ftl  messages.mo  messages.po
locales/ru/LC_MESSAGES/: dialog.ftl  messages.mo  messages.po
repositories/auth/: abc.py  repository.py
repositories/bookings/: abc.py  repository.py
repositories/participants/: abc.py  repository.py
schemas/: __init__.py  booking.py  participant.py
src/: config.py  config_schema.py  exceptions.py  main.py  prepare.py
src/api/: __main__.py  app.py  bot_client.py  dependencies.py  docs.py  exceptions.py  lifespan.py  logging_.py  main.py  routers.py
src/api/auth/: __init__.py  dependencies.py  routes.py  service.py  telegram.py
src/api/bookings/: __init__.py  routes.py
src/api/participants/: __init__.py  routes.py
src/api/root/: __init__.py  routes.py
src/api/tools/: __init__.py  calendar_numbers.py  crypto.py  utils.py
src/api/use_cases/: notifications.py
src/api/users/: __init__.py  routes.py
src/bot/: __main__.py  api.py  app.py  constants.py  dispatcher.py  filters.py  i18n.py  logging_.py  main.py  menu.py  middlewares.py  use_cases.py  webserver.py
src/bot/routers/: __init__.py  admin.py  registration.py  schedule.py  start_help_menu.py
src/bot/routers/admin/: __init__.py  admin_routes.py  states.py
src/bot/routers/booking/: __init__.py  create_booking_routes.py  my_bookings_routes.py  states.py
src/bot/routers/registration/: routes.py  (+1 more)
src/dependendies/: auth.py
src/repositories/: crud.py  innohassle_accounts.py
src/repositories/auth/: abc.py  repository.py
src/repositories/bookings/: abc.py  repository.py
src/repositories/participants/: abc.py  repository.py
src/repositories/smtp/: __init__.py  repository.py  verification-code.jinja2
src/repositories/users/: repository.py
src/schemas/: __init__.py  auth.py  booking.py  participant.py  smtp.py  user.py
src/storage/sql/: storage.py
src/tools/: __init__.py  crypto.py  utils.py
storage/sql/: __init__.py  storage.py
storage/sql/models/: __init__.py  booking.py  participant.py
templates/: auth-code.jinja2  logo.html
(+8 files in other folders)
