[tool.poetry]
name = "innohassle-musicroom"
version = "0.1.0"
description = ""
authors = ["Saveliy <s.lekhtin@innopolis.university>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
aiogram-dialog = "^2.3.1"
aiohttp = "^3.11.11"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
authlib = "^1.4.1"
babel = "^2.16.0"
colorlog = "^6.8.2"
cryptography = "^44.0.0"
fastapi = "^0.115.7"
fastapi-swagger = "^0.2.3"
fluent-runtime = "^0.4.0"
httpx = "^0.28.1"
icalendar = "^6.1.1"
pillow = "^11.1.0"
pre-commit = "^4.1.0"
pydantic = { version = "^2.10", extras = ["email"] }
python-docx = "^1.1.0"
pytz = "^2024.2"
pyyaml = "^6.0.1"
redis = "^5.2.1"
ruff = "^0.9.3"
sqlalchemy = "^2.0.37"
uvicorn = "^0.34.0"
cairosvg = "^2.7.1"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR"
]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
