[project]
name = "music-room"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "aiogram>=3.4.1",
    "aiogram-dialog>=2.2.0",
    "aiohttp>=3.9.3",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "authlib>=1.6.5",
    "babel>=2.16.0",
    "colorlog>=6.8.2",
    "cryptography>=43.0.1",
    "fastapi>=0.115.0",
    "fastapi-swagger>=0.2.3",
    "fluent-runtime>=0.4.0",
    "httpx>=0.27.0",
    "icalendar>=6.0.1",
    "pillow>=11.0.0",
    "pre-commit>=4.0.1",
    "pydantic[email]>=2.11.2",
    "python-docx>=1.1.0",
    "pytz~=2024.2",
    "pyyaml>=6.0.1",
    "redis>=5.1.0",
    "ruff>=0.7.4",
    "sqlalchemy>=2.0.23",
    "uvicorn>=0.32.1",
    "cairosvg>=2.7.1",
    "gunicorn>=23.0.0",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
