[project]
name = "music-room"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "aiogram>=3.27.0",
    "aiogram-dialog>=2.6.0",
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "joserfc>=1.6.5",
    "babel>=2.18.0",
    "colorlog>=6.10.1",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "fastapi-swagger>=0.4.49",
    "fluent-runtime>=0.4.0",
    "httpx>=0.28.1",
    "icalendar>=7.1.0",
    "pillow>=12.2.0",
    "pydantic[email]>=2.12.5",
    "python-docx>=1.2.0",
    "pytz>=2024.2",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "cairosvg>=2.9.0",
    "gunicorn>=26.0.0",
    "aiohttp-socks>=0.11.0",
    "prek>=0.3.13",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
